--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ migrate_working_dir/
 /build/
 .env
 
+# To make more percentage in github language for this project
+.gitattributes
+
 # Symbolication related
 app.*.symbols
 
